--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-/*
-font-family: 'Open Sans', sans-serif; Body
-font-family: 'Poppins', sans-serif; Headings
-*/
-
 /* Universal */
 body {
   font-family: 'Open Sans', sans-serif;
@@ -71,7 +66,7 @@ main {
   margin: 0 auto;
 }
 
-.landing-intro > a {
+.landing-intro > a, .landing-cta > a {
   display: block;
   width: 65%;
   margin: 3rem auto 6rem auto;
@@ -83,7 +78,7 @@ main {
   border-radius: 500px;
 }
 
-.landing-intro > a:hover {
+.landing-intro > a:hover, .landing-cta > a:hover {
   background-color: hsl(321, 100%, 78%);
   border-color:hsl(321, 100%, 78%);
 }
@@ -127,34 +122,34 @@ main {
 }
 
 #characteristic-bg-pattern-top-1 {
-  height: auto;
+  height: 112px;
   position: absolute;
   left: 0;
   top: -112px;
 }
 
 #characteristic-bg-pattern-bottom-1 {
-  height: auto;
+  height: 52px;
   position: absolute;
   left: 0;
   bottom: -52px;
 }
 
 #characteristic-bg-pattern-top-2 {
-  height: auto;
+  height: 103px;
   position: absolute;
   left: 0;
   top: -103px;
 }
 
 #characteristic-bg-pattern-bottom-2 {
-  height: auto;
+  height: 101px;
   position: absolute;
   left: 0;
   bottom: -101px;
 }
 
-.landing-app-characteristic > img:nth-of-type(2) {
+.landing-app-characteristic-hero-img {
   width: 80%;
   margin: 0 auto 4rem auto;
   padding-top: 4rem;
@@ -179,34 +174,18 @@ main {
   width: 85%;
   margin: 1.5rem auto;
 }
-
-.landing-cta > a {
-  display: block;
-  width: 55%;
-  margin: 3rem auto;
-  padding: .75rem 2rem;
-  color: hsl(0, 0%, 100%);
-  border: 1px solid hsl(322, 100%, 66%);
-  background-color: hsl(322, 100%, 66%);
-  box-shadow: 0 1rem 3rem hsla(0, 0%, 0%, 0.175);
-  border-radius: 500px;
-}
-
-.landing-cta > a:hover {
-  border-color: hsl(321, 100%, 78%);
-  background-color: hsl(321, 100%, 78%);
-}
 /* Footer */
 footer {
   display: flex;
   flex-direction: column;
+  padding: 1.5rem;
   position: relative;
   background-color: hsl(192, 100%, 9%);
   color: hsl(0, 0%, 100%);
 }
 
 #footer-bg-pattern-top {
-  height: auto;
+  height: 53px;
   position: absolute;
   left: 0;
   top: -53px;
@@ -214,7 +193,6 @@ footer {
 
 .footer-key-information {
   order: 2;
-  padding: 1.5rem;
 }
 
 .footer-key-information > h2 {
@@ -270,7 +248,6 @@ footer {
 .footer-newsletter-form {
   order: 1;
   margin: 3rem 0 6rem 0;
-  padding: 1.5rem;
 }
 
 .footer-newsletter-form > div:first-of-type {
@@ -318,4 +295,260 @@ footer {
 
 #newsletter-submit-input:hover {
   background-color: hsl(321, 100%, 78%);
+}
+
+@media (min-width: 576px) {
+  header, .landing-intro, footer {
+    padding: 2rem;
+  }
+
+  .landing-intro > a, .landing-cta > a {
+    width: 50%;
+  }
+
+  #hero-img {
+    width: 80%;
+  }
+
+  .landing-app-statistics > div {
+    width: 30%;
+  }
+
+  .landing-app-characteristic-hero-img {
+    width: 65%;
+  }
+
+  .footer-social-media-links {
+    width: 20%;
+  }
+
+  #newsletter-submit-input {
+    width: 35%;
+  }
+}
+
+@media (min-width: 767px) {
+  header, .landing-intro, footer {
+    padding: 3rem;
+  }
+
+  .landing-intro {
+    margin-bottom: 0;
+  }
+
+  .landing-intro > div {
+    width: 65%;
+  }
+
+  .landing-intro > a, .landing-cta > a {
+    width: 40%;
+  }
+
+  .landing-app-statistics {
+    display: flex;
+    align-items: center;
+    padding: 3rem;
+  }
+
+  .landing-app-statistics > div {
+    width: 25%;
+    margin: 0 auto;
+  }
+
+  .landing-app-characteristic {
+    margin: 6rem 0;
+  }
+
+  .landing-app-characteristic {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+    gap: 1rem;
+    padding: 4rem;
+    text-align: start;
+  }
+
+  .landing-app-characteristic-hero-img {
+    grid-column: 2 / 3;
+    grid-row: 1/ 3;
+    width: 90%;
+    padding: 0rem 0;
+    margin: 0 auto;
+  }
+
+  .landing-app-characteristic > h2 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    align-self: end;
+    margin-bottom: 0;
+  }
+
+  .landing-app-characteristic > div {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    margin: 0;
+    padding-bottom: 0;
+  }
+
+  #characteristic-flowing-conversations > h2, #characteristic-flowing-conversations > div {
+    grid-column: 2 / 3;
+    margin-left: 2rem;
+  }
+
+  #characteristic-flowing-img {
+    grid-column: 1 / 2;
+  }
+}
+
+@media (min-width: 922px) {
+  .landing-intro > div {
+    width: 50%;
+  }
+
+  .landing-intro > a, .landing-cta > a {
+    width: 35%;
+  }
+
+  .landing-app-statistics > div {
+    width: 20%;
+  }
+
+  .landing-app-characteristic {
+    margin: 9rem 0;
+  }
+
+  #characteristic-bg-pattern-top-1 {
+    content: url('../images/bg-section-top-desktop-1.svg');
+    height: 165px;
+    top: -165px;
+  }
+
+  #characteristic-bg-pattern-bottom-1 {
+    content: url('../images/bg-section-bottom-desktop-1.svg');
+    height: 139px;
+    bottom: -139px;
+  }
+
+  #characteristic-bg-pattern-top-2 {
+    content: url('../images/bg-section-top-desktop-2.svg');
+    height: 156px;
+    top: -156px;
+  }
+
+  #characteristic-bg-pattern-bottom-2 {
+    content: url('../images/bg-section-bottom-desktop-2.svg');
+    height: 139px;
+    bottom: -139px;
+  }
+
+  .landing-cta {
+    margin-top: 15rem;
+  }
+
+  footer {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  #footer-bg-pattern-top {
+    content: url('../images/bg-footer-top-desktop.svg');
+    height: 158px;
+    top: -158px;
+  }
+
+  .footer-key-information, .footer-newsletter-form {
+    width: 40%;
+  }
+
+  .footer-newsletter-form {
+    margin: 0;
+    order: 2;
+  }
+
+  #newsletter-submit-input {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1200px) {
+  body {
+    font-size: 1rem;
+  }
+
+  .landing-intro > h2 {
+    font-size: 2.5rem;
+  }
+
+  .landing-intro > div {
+    width: 45%;
+  }
+
+  .landing-intro > a, .landing-cta > a {
+    width: 30%;
+  }
+
+  .landing-app-statistics > div {
+    width: 15%;
+  }
+
+  .landing-app-characteristic {
+    padding: 3rem 6rem;
+  }
+
+  .landing-app-characteristic-hero-img {
+    width: 75%;
+  }
+
+  .landing-app-characteristic > h2, .landing-cta > h2 {
+    font-size: 2rem;
+  }
+
+  .landing-app-characteristic > div {
+    width: 90%;
+  }
+
+  .footer-key-information {
+    width: 30%;
+  }
+
+  .footer-social-media-links {
+    width: 25%;
+  }
+
+  .footer-newsletter-form {
+    width: 40%;
+  }
+
+  .footer-newsletter-form > div:last-of-type {
+    width: 85%;
+  }
+
+  .footer-newsletter-form > form {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  #newsletter-email-input {
+    width: 60%;
+    height: 80%;
+    padding: 0.75rem;
+  }
+
+  #newsletter-email-confirm {
+    order: 3;
+    width: 100%;
+    height: 20%;
+  }
+
+  #newsletter-submit-input {
+    width: 35%;
+    height: 80%;
+    padding: 0.75rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  footer {
+    padding: 6rem 6rem 3rem 6rem;
+  }
 }
